After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754548 - rtpsource: In case of sender, doesn't need to think about probation and rtp gap.
rtpsource: In case of sender, doesn't need to think about probation and rtp gap.
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal normal
: 1.7.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-09-04 05:10 UTC by Hyunjun Ko
Modified: 2015-10-02 13:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtpsource: doesn't handle probation and rtp gap in case of sender (7.33 KB, patch)
2015-09-04 05:11 UTC, Hyunjun Ko
none Details | Review
rtpsource: doesn't handle probation and rtp gap in case of sender (7.33 KB, patch)
2015-10-02 08:00 UTC, Hyunjun Ko
committed Details | Review

Description Hyunjun Ko 2015-09-04 05:10:08 UTC
update_receiver_stats is handling probation and rtp gap currently.
But if this is sender(e.g. rtsp-server), it doesn't need to do that.
Currently, the first packet is pushed to the queue(src->packets) and never being popped.
Comment 1 Hyunjun Ko 2015-09-04 05:11:43 UTC
Created attachment 310627 [details] [review]
rtpsource: doesn't handle probation and rtp gap in case of sender

This just adds flag is_receive and checks it.
But diff seems very ugly :(
Comment 2 Sebastian Dröge (slomo) 2015-09-04 09:08:07 UTC
Comment on attachment 310627 [details] [review]
rtpsource: doesn't handle probation and rtp gap in case of sender

Makes sense to me but the patch is really a bit ugly :)
Comment 3 Hyunjun Ko 2015-10-02 08:00:18 UTC
Created attachment 312544 [details] [review]
rtpsource: doesn't handle probation and rtp gap in case of sender

Rebased on the latest master
Comment 4 Sebastian Dröge (slomo) 2015-10-02 13:42:53 UTC
Comment on attachment 312544 [details] [review]
rtpsource: doesn't handle probation and rtp gap in case of sender

commit b814d7ed250239e57da2387ec9535852de06749f
Author: Hyunjun Ko <zzoon.ko@samsung.com>
Date:   Fri Oct 2 16:18:15 2015 +0900

    rtpsource: doesn't handle probation and rtp gap in case of sender
    
    https://bugzilla.gnome.org/show_bug.cgi?id=754548