rtpsource: doesn't handle probation and rtp gap in case of sender

https://bugzilla.gnome.org/show_bug.cgi?id=754548